half made add item

--- a/client/src/components/AuthForm/auth-form.scss
+++ b/client/src/components/AuthForm/auth-form.scss
@@ -14,7 +14,7 @@ $success-font: rgb(6, 121, 25);
     width: 90%;
     margin: 0 auto;
   }
-  input {
+  input, select {
     font-size: 20px;
     border-radius: 3px;
     border: 1px solid rgb(160, 159, 159);
