--- a/client/src/core/App/style.scss
+++ b/client/src/core/App/style.scss
@@ -22,3 +22,15 @@ h1 {
   font-family: sans-serif;
   color: $headerColor;
 }
+
+.config-btn {
+  background: rgb(248, 155, 14);
+  border: transparent;
+  border-radius: 3px;
+  padding: 15px 25px;
+  display: block;
+  color: #fff;
+  font-size: 16px;
+  cursor: pointer;
+  margin: 10px auto;
+}
