--- a/client/src/core/App/style.scss
+++ b/client/src/core/App/style.scss
@@ -23,27 +23,24 @@ h1 {
   color: $headerColor;
 }
 
-.config-btn {
-  background: rgb(248, 155, 14);
-  border: transparent;
-  border-radius: 3px;
-  padding: 15px 25px;
-  display: block;
-  color: #fff;
-  font-size: 16px;
-  cursor: pointer;
-  margin: 10px auto;
-}
-
 fieldset {
   border: none;
   width: 90%;
   margin: 0 auto;
   text-align: left;
-  input, label, textarea {
+  input, label, textarea, select {
     font-size: 20px;
   }
-  textarea {
+  input, textarea, select {
+    border-radius: 3px;
+    border: 1px solid rgb(160, 159, 159);
+    padding: 5px 10px;
     display: block;
+    width: 100%;
   }
 }
+
+textarea {
+  display: block;
+}
+
