--- a/client/src/pages/EditCategory/edit-category.scss
+++ b/client/src/pages/EditCategory/edit-category.scss
@@ -6,6 +6,7 @@ table {
     font-size: 20px;
     transform: scale(1.5);
     margin: 5px;
+    cursor: pointer;
   }
   td {
     border: 1px solid #000;
