--- a/client/src/pages/EditCategory/edit-category.scss
+++ b/client/src/pages/EditCategory/edit-category.scss
@@ -13,12 +13,37 @@ table {
     &[colSpan='3'] {
       min-width: 500px;
     }
+    p {
+      font-size: 16px;
+      margin: 5px 0;
+    }
+    .form-wrapper, fieldset {
+      justify-content: space-between;
+      width: 80%;
+      padding: 5px 10px;
+      input, select {
+        flex-grow: initial;
+        width: 60%;
+        font-size: 16px;
+      }
+      label {
+        font-size: 16px;
+      }
+      div {
+        display: flex;
+        justify-content: flex-end;
+        input {
+          flex-grow: 1;
+        }
+      }
+    
+    }
     .button-wrapper {
+      width: 90%;
+      margin: 0 auto;
       display: flex;
       justify-content: space-around;
       margin-bottom: 10px;
     }
   }
 }
-
-
