--- a/client/src/components/Spinner/spinner.scss
+++ b/client/src/components/Spinner/spinner.scss
@@ -41,15 +41,17 @@ $spinner-color: #3e4363;
   box-shadow: 80px 0 0 0 $spinner-color;
 }
 .loadingio-spinner-dual-ring-2z1o089l9d {
-  width: 100px;
-  height: 100px;
-  display: inline-block;
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
   overflow: hidden;
   background: #ffffff;
 }
 .ldio-hh2a3op55a6 {
-  width: 100%;
-  height: 100%;
+  margin-top: 200px;
+  width: 100px;
+  height: 100px;
   position: relative;
   transform: translateZ(0) scale(1);
   backface-visibility: hidden;
