--- a/client/src/core/App/style.scss
+++ b/client/src/core/App/style.scss
@@ -9,13 +9,16 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-
+  background: rgb(241, 241, 241);
 }
 
 .container {
   max-width: 1199px;
   text-align: center;
   margin: 0 auto;
+  & > div, & > form > div {
+    background: #fff;
+  }
 }
 
 h1 {
@@ -42,5 +45,13 @@ fieldset {
 
 textarea {
   display: block;
+}
+
+.full-page {
+  min-height: calc(100vh - 40px);
+}
+
+.page-wrapper {
+  min-height: 100vh;
 }
 
