--- a/client/src/pages/MainPage/components/Categories/categories.scss
+++ b/client/src/pages/MainPage/components/Categories/categories.scss
@@ -1,9 +1,11 @@
 .categories {
   text-align: left;
+  padding-left: 20px;
+  margin-top: 10px;
   li {
     list-style: none;
     border: 1px solid rgba(0, 0, 0, 0.466);
-    padding: 5px 5px;
+    padding: 5px 10px;
     margin-top: -1px;
     cursor: pointer;
     &:hover {
