--- a/client/src/pages/AddItem/add-item.scss
+++ b/client/src/pages/AddItem/add-item.scss
@@ -54,7 +54,8 @@
       display: none;
     }
     img {
-      width: 100%;
+      max-height: 100%;
+      max-width: 100%;
     }
   }
   textarea {
