--- a/client/src/pages/Category/components/Filter/filters.scss
+++ b/client/src/pages/Category/components/Filter/filters.scss
@@ -4,4 +4,14 @@
   h3 {
     margin-bottom: 8px;
   }
+  h5 {
+    margin-top: 5px;
+  }
+  input[type="checkbox"] {
+    margin-right: 5px;
+  }
+  input[type="number"] {
+    max-width: 50px;
+    font-size: 16px;
+  }
 }
