--- a/client/src/pages/AddItem/add-item.scss
+++ b/client/src/pages/AddItem/add-item.scss
@@ -42,6 +42,9 @@
       display: block;
       height: 200px;
       cursor: pointer;
+      justify-content: center;
+      align-items: center;
+      display: flex;
       &:hover {
         background: rgba(0, 0, 0, 0.295);      
       }
