--- a/client/src/pages/Category/category.scss
+++ b/client/src/pages/Category/category.scss
@@ -11,12 +11,15 @@ $plus-color: rgb(40, 37, 75);
   justify-content: space-between;
   cursor: pointer;
   padding: 5px;
-  height: 200px;
+  height: 210px;
 }
 
 .preview-img-wrapper {
   width: 150px;
   height: 150px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   img {
     max-width: 100%;
     max-height: 100%;
