--- a/client/src/pages/MainPage/components/Categories/categories.scss
+++ b/client/src/pages/MainPage/components/Categories/categories.scss
@@ -4,12 +4,17 @@
   margin-top: 10px;
   li {
     list-style: none;
-    border: 1px solid rgba(0, 0, 0, 0.466);
-    padding: 5px 10px;
+    border: 1px solid rgba(0, 0, 0, 0.192);
     margin-top: -1px;
     cursor: pointer;
     &:hover {
       background: rgba(0, 0, 0, 0.116);
+    }
+    a {
+      padding: 5px 10px;
+      display: block;
+      width: 100%;
+      height: 100%;
     }
   }
 }
@@ -18,3 +23,4 @@ button.custom-config {
   cursor: pointer;
   margin: 10px auto;
 }
+
