--- a/client/src/pages/AddItem/add-item.scss
+++ b/client/src/pages/AddItem/add-item.scss
@@ -46,11 +46,12 @@
       align-items: center;
       display: flex;
       &:hover {
-        background: rgba(0, 0, 0, 0.295);      
+        background: rgba(0, 0, 0, 0.295);
+        z-index: 2;   
       }
       &:hover img {
         opacity: .5;
-        z-index: -1;
+        // z-index: -1;
       }
     }
     input {
